# secure-clipboard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
config/: default.toml
scripts/: release.ps1  setup-wix-and-build.ps1
src/: clipboard.rs  config.rs  hotkey.rs  lib.rs  main.rs  notify.rs  tray.rs
src/redaction/: mask.rs  mod.rs  patterns.rs
tests/: config_tests.rs  pattern_tests.rs  redaction_rules.rs
wix/: main.wxs
