[package]
name = "secure-clipboard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Windows smart clipboard utility with local redaction."
repository = "https://github.com/Kalaga-Studio/secure-clipboard"

[dependencies]
anyhow = "1"
arboard = "3"
crossbeam-channel = "0.5"
directories = "5"
env_logger = "0.11"
global-hotkey = "0.7"
log = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.14"

[target.'cfg(windows)'.dependencies]
win-toast-notify = "0.1"
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
